# uma_tools

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/uma-api/: Cargo.toml
crates/uma-cli/: Cargo.toml
crates/uma-cli/src/: main.rs  sync.rs
crates/uma-core/: Cargo.toml
crates/uma-core/src/: ids.rs  lib.rs  uma_skill.rs
crates/uma-core/src/models/: mod.rs  skill.rs  uma.rs
crates/uma-db/: Cargo.toml
crates/uma-db/src/: db.rs  lib.rs  skill_repo.rs  types.rs  uma_repo.rs
crates/uma-scraper/: Cargo.toml
crates/uma-scraper/assets/: skill_condition_viewer.html
crates/uma-scraper/src/: client.rs  error.rs  fetch.rs  icon_category.rs  lib.rs  skill_condition_type_parser.rs  skill_detail_parser.rs  skill_parser.rs  trainee_list_parser.rs  trainee_parser.rs  uma_list_parser.rs  uma_parser.rs
migrations/: 20260421010718_initial_schema.sql  20260422022524_skill_details.sql  20260422234037_add_growth_rates_to_umas.sql  20260423034427_make_condition_type_description_nullable.sql  20260429012626_initial_schema.sql  20260429031853_change_uma_skills_primary_key.sql
