[package]
name = "uma-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uma_api"
path = "src/main.rs"

[dependencies]
uma-core = { path = "../uma-core" }
uma-db = { path = "../uma-db" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"