[package]
name = "uma_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
uma-core = { path = "../uma-core" }
uma-scraper = { path = "../uma-scraper" }
uma-db = { path = "../uma-db" }