[package]
name = "uma-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
uma-core = { path = "../uma-core" }
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.26"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
serde_json = "1"

[dev-dependencies]
wiremock = "0.6"